@@ -15,6 +15,8 @@ Version 1.2
   * CMake
   * OOC
 
+- Updated the Logtalk lexer.
+
 - Fixed the HtmlFormatter's handling of noclasses=True to not output any
   classes (#427).
 
